Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
Qt Creator 3.6.0
-
None
-
Mac OS X El Capitan
Description
1. Create a file on your system with the .qdoc extension.
2. In a Qt project, "Add Existing File" to the project.
3. The .qdoc file will be added to the "SOURCES" variable in .pro file (this is necessary for the file to show up in the project explorer).
4. When you build the project, it throws an error: ":-1: error: no such file or directory: '<qdoc_file_name>.o'"
Essentially, Qt Creator attempts to compile .qdoc files that are in the SOURCES qmake variable into object files, and this throws off the linker. Qt creator should allow you to add .qdoc files to the SOURCES variable but not try to compile them into object files.