src/plugins/cppeditor/cppeditorplugin.cpp
@@ -87,6 +87,7 @@ public:
         addMimeType(CppTools::Constants::C_HEADER_MIMETYPE);
         addMimeType(CppTools::Constants::CPP_SOURCE_MIMETYPE);
         addMimeType(CppTools::Constants::CPP_HEADER_MIMETYPE);
+        addMimeType(CppTools::Constants::QDOC_MIMETYPE);
 
         setDocumentCreator([]() { return new CppEditorDocument; });
         setEditorWidgetCreator([]() { return new CppEditorWidget; });
